--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,12 @@ body{
 #login-form input{
     padding: 15px 0px;
     border: none;
-    font-size: 18px;
+    font-size: 18px;    
+    margin-bottom: 20px;    
+}
+
+#login-form input:not([type="submit"]) {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
     transition: border-color 0.3s ease-in-out;
 }
 
@@ -48,4 +51,18 @@ body{
 #login-form input:focus{
     outline: none;
     border-color: var(--yellow);
+}
+
+#login-form input[type="submit"]{
+    background-color: var(--yellow);
+    cursor: pointer;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+#login-form a{
+    text-align: center;
+    text-decoration: none;
+    color: inherit;
+    font-size: 15px;
 }
