--- a/css/styles.css
+++ b/css/styles.css
@@ -1,68 +1,10 @@
 @import "reset.css";
-@import "status-bar.css";
 @import "variables.css";
+/* Components */
+@import "components/status-bar.css";
+/* Screens */
+@import "screens/login.css";
 
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.wellcom-header{
-    margin: 90px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.wellcom-header__title{
-    margin-bottom: 20px;
-    font-size: 25px;
-    font-weight: 600;
-}
-
-.wellcom-header__text{
-    width: 60%;
-    opacity: 0.7;
-    justify-content: center;
-}
-
-#login-form{
-    display: flex;
-    flex-direction: column;
-    margin: 0px 30px;
-}
-
-#login-form input{
-    padding: 15px 0px;
-    border: none;
-    font-size: 18px;    
-    margin-bottom: 20px;    
-}
-
-#login-form input:not([type="submit"]) {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    transition: border-color 0.3s ease-in-out;
-}
-
-#login-form input::placeholder{
-    color: rgba(0, 0, 0, 0.4);;
-}
-
-#login-form input:focus{
-    outline: none;
-    border-color: var(--yellow);
-}
-
-#login-form input[type="submit"]{
-    background-color: var(--yellow);
-    cursor: pointer;
-    padding: 20px;
-    border-radius: 5px;
-}
-
-#login-form a{
-    text-align: center;
-    text-decoration: none;
-    color: inherit;
-    font-size: 15px;
 }
