--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -15,4 +15,33 @@
 
     .nav__link{
         color: #2F363E;
+        position: relative;
+    }   
+
+    .nav__noti{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        background-color: tomato;
+        width: 25px;
+        height: 25px;
+        border-radius: 13px;
+        font-weight: 600;
+        position: absolute;
+        left: 20px;
+        bottom: 15px;
+    }
+    
+    .nav__dot{
+        display: flex;
+        justify-content: center;
+        align-items: center;        
+        background-color: tomato;
+        width: 10px;
+        height: 10px;
+        border-radius: 5px;        
+        position: absolute;
+        left: 30px;
+        bottom: 30px;
     }
