--- a/css/styles.css
+++ b/css/styles.css
@@ -12,5 +12,8 @@
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
     color: #2e363e;
-    height: 1000vh;
+}
+
+.main-screen{
+    margin: 0px var(--horizontal-space);
 }
