--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,7 +1,6 @@
 .find-icons{
     display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    justify-content: space-between;        
 }
 
 .find-icons__icon{
@@ -16,4 +15,24 @@
 
 .find-icons__icon span{
     margin-top: 18px;
+}
+
+.recommend-friends{
+    border-top: var(--main-border);
+    border-bottom: var(--main-border);
+    padding: 25px 0px;
+    margin: 25px 0px;
+}
+
+.recommend-friends__title{
+    font-size: 15px;
+    color: var(--grey-font-color);
+}
+
+.recommend-friends span{
+    margin: 110px 0px;
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    color: var(--grey-font-color);
 }
