Settings Screen part One
1. setting에 쓰이는 header와 대화창 header가 비슷하므로 componenet로 분리하자.
2. setting header 3개 div 정렬위해서 first child 에 margin-right : auto를
last child에 margin-left : auto를 주자

--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -9,6 +9,7 @@
 }
 
 .more-suggestions__title{
+    font-weight: 500;
     margin-bottom: 30px;
 }
 
@@ -37,4 +38,10 @@
 .more-suggestions__icon-image i{
     font-size: 30px;
     color: white;
+}
+
+.more-suggestions__icon-text{
+    font-weight: 500;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.5)
 }
