--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -3,15 +3,21 @@
     justify-content: center;
     align-items: center;
     margin-top: 25px;
-    padding: 10px 0px;
+    padding: var(--horizontal-space);
     margin-bottom: 10px;
-    margin-left: 25px;
-    margin-right: 25px;
 }
 
 .alt-header__title{
     font-size: 28px;
     font-weight: 600;    
+}
+
+.alt-header__column{
+    width: 33%;
+}
+
+.alt-header__column:nth-child(2){
+    text-align: center;
 }
 
 .alt-header__column:first-child{
@@ -20,8 +26,10 @@
 
 .alt-header__column:last-child{
     margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
 }
 
-.alt-header__column--bar{
-    padding-left: 10px;
+.alt-header__column span:last-child{
+    margin-left: 10px;
 }
