--- a/css/screens/chatting.css
+++ b/css/screens/chatting.css
@@ -1,3 +1,27 @@
-#chatting-body{
-    background-color: #abc1d1;
+#chatting-body{    
+    height: 10000vh;
+    background-color: #abc1d1;       
+}
+
+#chatting-body .status-bar,
+#chatting-body .alt-header{    
+    top: 0;
+    position: fixed;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #abc1d1;       
+}
+
+.main-chat{
+    padding-top: 150px;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.chat__timestamp{
+    color: white;
+    background-color: #92a4b2;
+    padding: 15px;
+    border-radius: 20px;
 }
