--- a/css/screens/chatting.css
+++ b/css/screens/chatting.css
@@ -24,4 +24,42 @@
     background-color: #92a4b2;
     padding: 15px;
     border-radius: 20px;
+    margin-bottom: 25px;
+}
+
+.message-row{
+    width: 100%;
+    display: flex;
+}
+
+.message-row img{
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+    margin-right: 10px;
+}
+
+.message__author{
+    opacity: 0.8;
+    font-size: 15px;
+    margin-bottom: 8px;
+    display: block;
+}
+
+.message__bubble{
+    background-color: white;
+    padding: 12px;
+    border-radius: 10px;
+    font-weight: 500;
+    margin-right: 5px;
+}
+
+.message__info{
+    display: flex;
+    align-items: flex-end;
+}
+
+.message__time{
+    opacity: 0.8;
+    font-size: 15px;
 }
