Chat Screen part Five
modifider를 이용하여 html 을 변경하지 않고 row 정렬을 바꾸고 element속성을 변경할 수 있따.

--- a/css/screens/chatting.css
+++ b/css/screens/chatting.css
@@ -30,6 +30,7 @@
 .message-row{
     width: 100%;
     display: flex;
+    margin-bottom: 25px;
 }
 
 .message-row img{
@@ -62,4 +63,18 @@
 .message__time{
     opacity: 0.8;
     font-size: 15px;
+}
+
+.message-row--own{
+    justify-content: flex-end;
+}
+
+.message-row--own .message__bubble{
+    background-color: var(--yellow);
+    margin-right: 0px;  
+    margin-left: 5px;
+}
+
+.message-row--own .message__info{
+    flex-direction: row-reverse;
 }
