--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,10 +18,23 @@
         position: relative;
     }   
 
+    @keyframes notiAnimation{
+        0%{
+            transform: none;
+        }
+        50%{
+            transform: translateY(-5px) rotateY(180deg);
+        }
+        100%{
+            transform: none;
+        }
+    }
+
     .nav__noti{
         position: absolute;
         left: 20px;
         bottom: 15px;
+        animation: notiAnimation 2s ease-in-out infinite;
     }
     
     .nav__dot{
@@ -35,4 +48,32 @@
         position: absolute;
         left: 30px;
         bottom: 30px;
+    }
+
+    @keyframes appearNavBtnAnimation{
+        from{            
+            opacity: 0;
+        }
+        to{
+            transform: none;
+            opacity: 1;
+        } 
+    }
+
+    .nav__btn{
+        transform: translateY(80px);
+        opacity: 0;
+        animation: appearNavBtnAnimation 0.5s ease-in-out forwards;
+    }
+
+    .nav__btn:nth-child(2){
+        animation-delay: 0.3s;
+    }
+
+    .nav__btn:nth-child(3){
+        animation-delay: 0.6s;
+    }
+
+    .nav__btn:last-child{
+        animation-delay: 0.9s;
     }
