--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -102,3 +102,23 @@
 .open-post__heart-count span{
     margin-left: 3px;
 }
+
+@keyframes heartBeatAnimation{
+    0%{
+        color: white;
+        transform: none;
+    }
+    50%{
+        color: tomato;
+        transform: scale(2);
+    }
+    100%{
+        color: white;
+        transform: none;
+    }
+}
+
+.open-post__heart-count:hover i{
+    will-change: transform;
+    animation: heartBeatAnimation 1s linear infinite;
+}
