--- a/css/screens/chatting.css
+++ b/css/screens/chatting.css
@@ -1,5 +1,5 @@
 #chatting-body{    
-    height: 10000vh;
+    height: 500vh;
     background-color: #abc1d1;       
 }
 
@@ -12,11 +12,23 @@
     background-color: #abc1d1;       
 }
 
+@keyframes fadeIn{
+    from{
+        transform: translateY(30px);
+        opacity: 0;
+    }
+    to{
+        transform: none;
+        opacity: 1;
+    }
+}
+
 .main-chat{
-    padding-top: 150px;    
+    padding-top: 180px;    
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeIn 0.3s linear;
 }
 
 .chat__timestamp{
@@ -105,6 +117,7 @@
     height: 30px;
     border: var(--main-border);
     border-radius: 20px;
+    transition: all .3s ease-in-out;
 }
 
 .reply__column:last-child > i,
@@ -136,4 +149,15 @@
 .reply input:focus,
 .reply input:active{
     outline: none;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile-wink,
+.reply:focus-within button{
+    opacity: 0;
+}
+
+.reply:focus-within input{
+    width: 80vw;
+    transform: translateX(-12%);
 }
