--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -1,18 +1,21 @@
-#no-mobile{
-    position: absolute;
-    z-index: 99;
-    height: 100vh;
-    background-color: var(--yellow);
-    width: 100vw;
-    display: flex;
-    top: 0;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
+#no-mobile {
+  position: absolute;
+  z-index: 99;
+  height: 100vh;
+  background-image: url(../../screenshot/toobigScreen.png);
+  width: 100vw;
+  display: flex;
+  top: 0;
+  justify-content: center;
+  font-size: 30px;
 }
 
-@media screen and (max-width:645px) {
-    #no-mobile{
-        display: none;
-    }
+#no-mobile span {
+  margin-top: 100px;
+}
+
+@media screen and (max-width: 645px) {
+  #no-mobile {
+    display: none;
+  }
 }
