--- a/css/screens/chatting.css
+++ b/css/screens/chatting.css
@@ -1,163 +1,169 @@
-#chatting-body{    
-    height: 500vh;
-    background-color: #abc1d1;       
+#chatting-body {
+  height: 500vh;
+  background-color: #b33939;
 }
 
 #chatting-body .status-bar,
-#chatting-body .alt-header{    
-    top: 0;
-    position: fixed;
-    width: 100%;
-    box-sizing: border-box;
-    background-color: #abc1d1;       
+#chatting-body .alt-header {
+  top: 0;
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #b33939;
 }
 
-@keyframes fadeIn{
-    from{
-        transform: translateY(30px);
-        opacity: 0;
-    }
-    to{
-        transform: none;
-        opacity: 1;
-    }
+@keyframes fadeIn {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
 }
 
-.main-chat{
-    padding-top: 180px;    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    animation: fadeIn 0.3s linear;
+.main-chat {
+  padding-top: 180px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  animation: fadeIn 0.3s linear;
 }
 
-.chat__timestamp{
-    color: white;
-    background-color: #92a4b2;
-    padding: 15px;
-    border-radius: 20px;
-    margin-bottom: 25px;
+.chat__timestamp {
+  color: white;
+  background-color: #b33939;
+  padding: 15px;
+  border-radius: 20px;
+  margin-bottom: 25px;
 }
 
-.message-row{
-    width: 100%;
-    display: flex;
-    margin-bottom: 25px;
+.message-row {
+  width: 100%;
+  display: flex;
+  margin-bottom: 25px;
 }
 
-.message-row img{
-    width: 50px;
-    height: 50px;
-    border-radius: 20px;
-    margin-right: 10px;
+.message-row img {
+  width: 50px;
+  height: 50px;
+  border-radius: 20px;
+  margin-right: 10px;
+  object-fit: cover;
 }
 
-.message__author{
-    opacity: 0.8;
-    font-size: 15px;
-    margin-bottom: 8px;
-    display: block;
+.message__author {
+  opacity: 0.8;
+  font-size: 15px;
+  margin-bottom: 8px;
+  display: block;
 }
 
-.message__bubble{
-    background-color: white;
-    padding: 12px;
-    border-radius: 10px;
-    font-weight: 500;
-    margin-right: 5px;
+.message__bubble {
+  background-color: white;
+  padding: 12px;
+  border-radius: 10px;
+  font-weight: 500;
+  margin-right: 5px;
+  color: black;
 }
 
-.message__info{
-    display: flex;
-    align-items: flex-end;
+.message__info {
+  display: flex;
+  align-items: flex-end;
 }
 
-.message__time{
-    opacity: 0.8;
-    font-size: 15px;
+.message__time {
+  opacity: 0.8;
+  font-size: 15px;
 }
 
-.message-row--own{
-    justify-content: flex-end;
+.message-row--own {
+  justify-content: flex-end;
 }
 
-.message-row--own .message__bubble{
-    background-color: var(--yellow);
-    margin-right: 0px;  
-    margin-left: 5px;
+.message-row--own .message__bubble {
+  background-color: #e55039;
+  margin-right: 0px;
+  margin-left: 5px;
 }
 
-.message-row--own .message__info{
-    flex-direction: row-reverse;
+.message-row--own .message__info {
+  flex-direction: row-reverse;
 }
 
-.reply{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    padding: 5px 25px;
-    align-items: center;
-    box-sizing: border-box;
+.reply {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 25px;
+  align-items: center;
+  box-sizing: border-box;
 }
 
-.reply .reply__column:first-child{
-    width: 10%;
+.reply .reply__column:first-child {
+  width: 10%;
 }
 
-.reply .reply__column:last-child{
-    width: 90%;
-    position: relative;
+.reply .reply__column:last-child {
+  width: 90%;
+  position: relative;
 }
 
-.reply input{
-    width: 100%;
-    height: 30px;
-    border: var(--main-border);
-    border-radius: 20px;
-    transition: all .3s ease-in-out;
+.reply input {
+  width: 100%;
+  height: 30px;
+  border: var(--main-border);
+  border-radius: 20px;
+  transition: all 0.3s ease-in-out;
 }
 
 .reply__column:last-child > i,
-.reply__column:last-child button{
-    position: absolute;
-    right: 0;
-    top: 2px;
+.reply__column:last-child button {
+  position: absolute;
+  right: 0;
+  top: 2px;
 }
 
-.reply__column:last-child > i{
-    right: 40px;
-    top: 5px;
-    font-size: 25px;
+.fa-plus-square {
+  color: black;
+}
+.reply__column:last-child > i {
+  right: 40px;
+  top: 5px;
+  font-size: 25px;
+  color: black;
 }
 
-.reply__column button{
-    background-color: var(--yellow);
-    border: none;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
+.reply__column button {
+  background-color: var(--iron-bright);
+  border: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 }
 
 .reply__column button:focus,
-.reply__column button:active{
-    outline: none;
+.reply__column button:active {
+  outline: none;
 }
 
 .reply input:focus,
-.reply input:active{
-    outline: none;
+.reply input:active {
+  outline: none;
 }
 
 .reply:focus-within .reply__column:first-child,
 .reply:focus-within .fa-smile-wink,
-.reply:focus-within button{
-    opacity: 0;
+.reply:focus-within button {
+  opacity: 0;
 }
 
-.reply:focus-within input{
-    width: 80vw;
-    transform: translateX(-12%);
+.reply:focus-within input {
+  width: 80vw;
+  transform: translateX(-12%);
 }
