--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,48 +1,48 @@
-#friends-display-link{
-    text-align: center;
-    display: block;
-    background-color: #fafafa;
-    padding: 15px 0px;
-    margin-bottom: 10px;
+#friends-display-link {
+  text-align: center;
+  display: block;
+  background-color: var(--iron-drak);
+  padding: 15px 0px;
+  margin-bottom: 10px;
 }
 
-#friends-display-link i{
-    color: rgba(0, 0, 0, 0.3);
+#friends-display-link i {
+  color: whitesmoke;
 }
 
-.friends-screen__channel{
-    margin-top: 20px;
-    border-top: var(--main-border);
-    padding-top: 10px;
+.friends-screen__channel {
+  margin-top: 20px;
+  border-top: var(--main-border);
+  padding-top: 10px;
 }
 
-.friends-screen__channel-header{
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-    color: rgba(0, 0, 0, 0.5);
+.friends-screen__channel-header {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  color: whitesmoke;
 }
 
-@keyframes hideSplash{
-    from{
-        opacity: 1;
-    }    
-    to{
-        opacity: 0;
-        visibility: hidden;
-    }
+@keyframes hideSplash {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
-.splash-screen{
-    background-color: var(--yellow);
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 100px;
-    animation: hideSplash 0.5s ease-in-out forwards;
-    animation-delay: 1s;
+.splash-screen {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 100px;
+  animation: hideSplash 0.5s ease-in-out forwards;
+  animation-delay: 1s;
 }
