--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,15 @@
 @import "screens/setting.css";
 @import "screens/chatting.css";
 
-body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
-    color: #2e363e;
+@import "animation/commonAnimation.css";
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: whitesmoke;
+  background-image: url(../screenshot/ironman_main.png);
 }
 
-.main-screen{
-    margin: 0px var(--horizontal-space);
+.main-screen {
+  margin: 0px var(--horizontal-space);
 }
